client/website/src/css/Newsletters.css
.NewsletterPage {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100vw;
}
.NewsletterPage__title {
  margin-top: 86px;
  margin-bottom: 30px;

  font-family: var(--heading-font);
  font-style: normal;
  font-weight: bold;
  font-size: 36px;
  line-height: 45px;

  color: var(--black);
}

@media only screen and (min-width: 301px) {
  .NewsletterPage__title--mobile {
    margin-top: 24px;
    margin-bottom: 12px;

    font-family: var(--heading-font);
    font-style: normal;
    font-weight: bold;
    font-size: 26px;
    line-height: 170%;

    color: var(--black);
  }
}
@media only screen and (max-width: 300px) {
  .NewsletterPage__title--mobile {
    margin-top: 24px;
    margin-bottom: 12px;

    font-family: var(--heading-font);
    font-style: normal;
    font-weight: bold;
    font-size: 20px;
    line-height: 170%;

    color: var(--black);
  }
}
.NewsletterContainer {
  display: flex;
  flex-direction: row;
  justify-content: center;
  flex-wrap: wrap;
  margin: 0 75px 70px 75px;
  max-width: 1100px;
}

.newsletter__pagination {
  color: var(--grey);
  padding-inline-start: 0px !important;
  padding: 0 !important;
  margin-bottom: 60px;
}

.newsletter__pagination ul {
  display: inline-block;
}

.newsletter__pagination li {
  display: inline-block;
  padding-left: 10px;
  padding-right: 10px;
}

.newsletter__pagination--active {
  color: var(--black);
}

